fix bottom margin on mobile

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -29,3 +29,11 @@
   .backToHome {
     margin: 3rem 0 0;
   }
+
+  @media screen and (max-width: 768px) {
+    .containerMargin {
+      max-width: 36rem;
+      padding: 0 1rem;
+      margin: 6rem auto 0rem;
+    }
+  }
